# harness-core

./: .bazelignore  .bazelproject  .bazelrc  .build-cleaner-index  .gitignore  .gitleaks.toml  .gitleaksignore  .ticonfig.yaml  BUILD.bazel  GitteaConnectorDTO.java  README.md  WORKSPACE  bazelignore  bazelrc.common  bazelrc.local  bazelrc.remote  build.properties  hewllo.sh  jdk11test.txt  jira-projects.txt  latest-maven-deps.py  maven-manifest-override.txt  maven-manifest.json  maven_install.json  maven_manifest.json  output.csv  pom.xml  protocol.info  sonar-project.properties  test-util.bzl
101-idp-service/: .gitignore  BUILD.bazel  config.yml
101-idp-service/container/: BUILD.bazel
101-idp-service/src/main/java/io/harness/dtos/: AppConfigDTO.java  EnvironmentVariableDTO.java
101-idp-service/src/main/java/io/harness/entities/: AppConfig.java  EnvironmentVariable.java
101-idp-service/src/main/java/io/harness/idp/: IDPApplication.java  IDPConfiguration.java  IDPModule.java  IDPPersistenceModule.java  IDPServiceModuleRegistrars.java  InspectCommand.java
101-idp-service/src/main/java/io/harness/mappers/: AppConfigMapper.java  (+1 more)
101-idp-service/src/test/java/io/harness/: IDPServiceTest.java
120-ng-manager/modules/ngsettings/: BUILD.bazel
120-ng-manager/modules/ngsettings/contracts/: BUILD.bazel
120-ng-manager/modules/ngsettings/src/main/resources/: BUILD.bazel
127-cd-nextgen-entities/: BUILD.bazel
127-cd-nextgen-entities/src/test/resources/: serviceOverrides-with-invalid-config.yaml  serviceOverrides-with-invalid-manifest.yaml  serviceOverrides-with-manifests-and-configs.yaml  serviceOverrides-with-runtime-inputs-res.yaml  serviceOverrides-with-runtime-inputs.yaml
127-cd-nextgen-entities/src/test/resources/service/: service-with-primaryManifestRef-Kubernetes.yaml  service-with-runtime-inputs-res.yaml  service-with-runtime-inputs.yaml
925-delegate-service-contracts/: BUILD.bazel
960-ng-core-beans/: BUILD.bazel
960-persistence-beans/: BUILD.bazel
999-annotations/: BUILD.bazel
delegate-task-mocking/: BUILD.bazel
delegate-task-mocking/src/main/resources/: config.yaml  delegate.csv
delegate/agent/: BUILD.bazel
deploy-detective/: BUILD.bazel  config.yml
deploy-detective/src/main/java/io/harness/: AppConfig.java  DeployDetectiveApp.java  DetectiveAppModule.java
dockerization/base-images/ubi-base-cie-agents/java-go/: BUILD.bazel  Dockerfile-java-go-cie-agent
dockerization/base-images/ubi-java-base-bazel/: BUILD.bazel
dockerization/base-images/ubi-minimal-bazel/: BUILD.bazel
dockerization/ce-nextgen/: BUILD.bazel  Dockerfile-ce-nextgen-cie-jdk  Dockerfile-ce-nextgen-jenkins-k8-gcr-openjdk
dockerization/ce-nextgen/scripts/: replace_configs.sh  start_process.sh
dockerization/change-data-capture/: BUILD.bazel  Dockerfile-change-data-capture-cie-jdk  Dockerfile-change-data-capture-cie-jdk-multistage  Dockerfile-change-data-capture-jenkins-k8-gcr-openjdk  Dockerfile-change-data-capture-multistage
dockerization/change-data-capture/scripts/: replace_configs.sh
dockerization/command-library-server/: BUILD.bazel  Dockerfile-command-library-server-cie-jdk  Dockerfile-command-library-server-jenkins-k8-gcr-openjdk  Dockerfile-command-library-server-jenkins-k8-openjdk
dockerization/command-library-server/scripts/: replace_configs.sh  start_process.sh
dockerization/cv-nextgen/: BUILD.bazel  Dockerfile-cv-nextgen-cie-jdk  Dockerfile-verification-jenkins-k8-gcr-openjdk
dockerization/cv-nextgen/scripts/: replace_configs.sh  start_process.sh
dockerization/delegate-service-app/: BUILD.bazel  Dockerfile-delegate-service-app-cie-jdk  Dockerfile-delegate-service-app-cie-jdk-onprem  Dockerfile-delegate-service-app-jenkins-k8-gcr-openjdk  Dockerfile-delegate-service-app-jenkins-k8-openjdk
dockerization/delegate-service-app/scripts/: replace_configs.sh  start_process.sh
dockerization/event-server/: BUILD.bazel  Dockerfile-event-server-cie-jdk  Dockerfile-event-server-jenkins-k8-gcr-openjdk  Dockerfile-event-server-jenkins-k8-openjdk  Dockerfile-event-server-multistage  Dockerfile-event-server-multistage-cie-jdk
dockerization/event-server/scripts/: replace_configs.sh  start_process.sh
dockerization/eventsapi-monitor/: BUILD.bazel  Dockerfile-eventsapi-monitor-cie-jdk  Dockerfile-eventsapi-monitor-jenkins-k8-gcr-openjdk  Dockerfile-eventsapi-monitor-jenkins-k8-openjdk
dockerization/eventsapi-monitor/scripts/: replace_configs.sh  start_process.sh
dockerization/manager/: BUILD.bazel  Dockerfile-manager-cie-jdk  Dockerfile-manager-jenkins-k8-gcr-openjdk
dockerization/manager/scripts/: replace_configs.sh  run.sh  start_process.sh  start_process_bazel.sh
dockerization/migrator/: BUILD.bazel  Dockerfile-manager-jenkins-k8-gcr-openjdk  Dockerfile-migrator-cie-multistage-jdk  Dockerfile-migrator-multistage
dockerization/migrator/scripts/: replace_configs.sh  start_process.sh  start_process_bazel.sh
dockerization/ng-manager/: BUILD.bazel  Dockerfile-ng-manager-cie-jdk  Dockerfile-ng-manager-cie-jdk-multistage  Dockerfile-ng-manager-jenkins-k8-gcr-openjdk  Dockerfile-ng-manager-multistage
dockerization/ng-manager/scripts/: replace_configs.sh  start_process.sh
dockerization/template-service/: BUILD.bazel  Dockerfile-template-service-cie-jdk  Dockerfile-template-service-jenkins-k8-gcr-openjdk
dockerization/template-service/scripts/: replace_configs.sh  start_process.sh
dockerization/verification/: BUILD.bazel  Dockerfile-verification-cie-jdk  Dockerfile-verification-cie-multistage-jdk  Dockerfile-verification-jenkins-k8-gcr-openjdk  Dockerfile-verification-multistage
dockerization/verification/scripts/: replace_configs.sh  start_process.sh
idp-service/service/: BUILD.bazel
platform-service/modules/slack-service/: BUILD.bazel
platform-service/modules/slack-service/src/main/resources/: BUILD.bazel
platform-service/modules/slack-service/src/test/resources/: BUILD.bazel
product/sscs/service/: BUILD.bazel  go.mod  main.go
product/sscs/service/sbom/: BUILD.bazel  sbom.go
release-radar/: BUILD.bazel  config.yml
(+25167 files in other folders)
