exports_files([
    "tools/bazel/signer.sh",
])

filegroup(
    name = "container_common_files",
    srcs = glob([
        "AppServerAgent-1.8-21.11.2.33305.zip",
        "protocol.info",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "delegate_proxy_files",
    srcs = glob([
        "destination/storage/**/*",
    ]),
    visibility = ["//visibility:public"],
)
# gazelle:java_maven_install_file project/main_maven_install.json

########################################################################################################
####################################################  Go Starts Here    ####################################################
########################################################################################################

# Refer for a list of all gazelle directives: http://www.lib4dev.in/info/bazelbuild/bazel-gazelle/112655189
# gazelle:exclude  src/vendor
# gazelle:exclude  vendor
# gazelle:exclude  build
# gazelle:exclude  */target

# gazelle:exclude .git/
# gazelle:exclude pkg/
## gazelle:proto_strip_import_prefix /proto/harness.io/

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

# gazelle:resolve java org.slf4j @maven//:org_slf4j_slf4j_api
# gazelle:resolve java lombok //:lombok
# gazelle:resolve java lombok.delombok.ant //:lombok
# gazelle:resolve java lombok.experimental //:lombok
# gazelle:resolve java lombok.experimental.var //:lombok
# gazelle:resolve java lombok.extern.apachecommons //:lombok
# gazelle:resolve java lombok.extern.flogger //:lombok
# gazelle:resolve java lombok.extern.jackson //:lombok
# gazelle:resolve java lombok.extern.java //:lombok
# gazelle:resolve java lombok.extern.jbosslog //:lombok
# gazelle:resolve java lombok.extern.log4j //:lombok
# gazelle:resolve java lombok.javac.apt //:lombok
# gazelle:resolve java lombok.launch //:lombok
# gazelle:resolve java lombok.val //:lombok
# gazelle:resolve java lombok.var //:lombok
# gazelle:resolve java lombok.extern.slf4j //:lombok
# gazelle:resolve java com.google.inject @maven//:com_google_inject_guice
# gazelle:resolve java org.w3c.dom @maven//:xml_apis_xml_apis

# gazelle:prefix github.com/harness/harness-core
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_java",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@contrib_rules_jvm//java/gazelle",
    ],
)

load("@io_bazel_rules_go//go:def.bzl", "go_path", "nogo")

buildifier(
    name = "buildifier",
)

nogo(
    name = "nogo_vet",
    vet = True,
    visibility = ["//visibility:public"],
)

# Reference: https://github.com/google/gvisor/blob/release-20210830.0/BUILD#L101

# gopath defines a directory that is structured in a way that is compatible
# with standard Go tools. Things like godoc, editors and refactor tools should
# work as expected.
#
# The files in this tree are symlinks to the true sources.
go_path(
    name = "gopath",
    mode = "link",
    deps = [
        # Main binaries.
        #
        # For reasons related to reproducibility of the generated
        # files, in order to ensure that :gopath produces only a
        # a single "pure" version of all files, we can only depend
        # on go_library targets here, and not go_binary.

        # Note: If any library is not referenced by below ones, then add them in this list.
        "//product/ci/engine:engine_lib",
        "//product/ci/addon:addon_lib",
        "//product/ci/scm:scm_lib",
        "//product/log-service:log-service_lib",
    ],
)

########################################################################################################
####################################################  JAVA Starts Here    ####################################################
########################################################################################################

java_plugin(
    name = "lombok_plugin",
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    visibility = ["//visibility:public"],
    deps = ["@maven//:org_projectlombok_lombok"],
)

java_library(
    name = "lombok",
    exported_plugins = [":lombok_plugin"],
    visibility = ["//visibility:public"],
    exports = ["@maven//:org_projectlombok_lombok",
                "@maven//:org_slf4j_slf4j_api",
                "@maven//:com_google_code_findbugs_annotations"],
)

filegroup(
    name = "git",
    srcs = glob(
        [".git/**/*"],
        exclude = [".git/**/*[*"],  # gitk creates temp files with []
    ),
    tags = ["manual"],
)

filegroup(
    name = "coverage_report",
    srcs = ["bazel-out/_coverage/_coverage_report.dat"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test_reports",
    srcs = glob(["bazel-testlogs/**/test.xml"]),
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

load("//tools/bazel/sonarqube:defs.bzl", "sonarqube")
load("//project/flags:sonarqube_targets_seperated.bzl", "get_sonarqube_targets_seperated")

sonarqube(
    name = "sq_below_400",
    srcs = [],
    coverage_report = ":coverage_report",
    modules = get_sonarqube_targets_seperated(),
    project_key = "portal_bazel_below_400",
    project_name = "Bazel Portal Below 400",
    scm_info = [":git"],
    sq_properties_filename = "sonar-project-below-400.properties",
    tags = ["manual"],
    targets = [],
)

sonarqube(
    name = "sq_400",
    srcs = [],
    coverage_report = ":coverage_report",
    modules = get_sonarqube_targets_seperated(),
    project_key = "portal_bazel_400",
    project_name = "Bazel Portal 400",
    scm_info = [":git"],
    sq_properties_filename = "sonar-project-400.properties",
    tags = ["manual"],
    targets = [],
)

sonarqube(
    name = "sq_above_400",
    srcs = [],
    coverage_report = ":coverage_report",
    modules = get_sonarqube_targets_seperated(),
    project_key = "portal_bazel_above_400",
    project_name = "Bazel Portal Above 400",
    scm_info = [":git"],
    sq_properties_filename = "sonar-project-above-400.properties",
    tags = ["manual"],
    targets = [],
)

filegroup(
    name = "resource",
    srcs = [
        "cert.pem",
        "key.pem",
        "keystore.jks",
    ],
    visibility = ["//visibility:public"],
)

load("@rules_python//python:defs.bzl", "py_runtime", "py_runtime_pair")

py_runtime(
    name = "python3_runtime",
    files = ["@python_interpreter//:files"],
    interpreter = "@python_interpreter//:python_bin",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)

py_runtime_pair(
    name = "py_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":python3_runtime",
)

toolchain(
    name = "py_toolchain",
    toolchain = ":py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "alpn_boot_8.1.13.v20181017_tar",
    files = {
        "@alpn_boot_8.1.13.v20181017//file": "alpn-boot-8.1.13.v20181017.jar",
    },
    mode = "0644",
    package_dir = "/opt/harness-delegate",
    tags = [
        "manual",
        "no-cache",
        "no-ide",
    ],
    visibility = ["//visibility:public"],
)
