# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

filegroup(
    name = "resource",
    srcs = [
#        "cert.pem",
#        "key.pem",
    ],
    visibility = ["//visibility:private"],
)

java_binary(
    name = "module",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    data = [":resource"],
    main_class = "io.harness.idp.IDPApplication",
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//400-rest:module",
        "//420-delegate-service:module",
        "//940-primary-version-manager:module",
        "//960-persistence:module",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//101-idp-service/src/test/resources:resource",
    ],
    resources = [
        "//101-idp-service/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "module",
        "//990-commons-test:module",
    ],
)

run_tests()

run_analysis()

exports_files([
    "config.yml",
])
