load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/macros.bzl", "run_analysis")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
        "//127-cd-nextgen-entities/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//125-freeze:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/azure/config/yaml:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/commons:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/customdeployment:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/elastigroup:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/elastigroup/config:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/elastigroup/config/yaml:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/elastigroup/output:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/environment/bean:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/environment/helper:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/environment/yaml:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/expressions:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/gitops:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/gitops/beans:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/gitops/entity:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/gitops/mappers:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/gitops/service:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/gitops/yaml:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/infra/beans:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/infra/beans/host:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/infra/mapper:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/infra/outcome:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/infra/yaml:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/manifest:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/manifest/yaml:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/manifest/yaml/kustomize:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/cdng/manifest/yaml/oci:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/ng/core/environment/beans:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/ng/core/environment/services:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/ng/core/infrastructure:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/repositories/gitops/custom:module",
        "//127-cd-nextgen-entities/src/main/java/io/harness/repositories/gitops/spring:module",
        "//400-rest:module",
        "//877-filestore:module",
        "//878-ng-common-utilities:module",
        "//960-ng-core-beans:module",
        "//960-ng-license-usage-beans:module",
        "//979-recaster:module",
        "//clients/pipeline-service/pms-sdk:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_springframework_data_spring_data_commons",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//127-cd-nextgen-entities/src/test/resources:resource",
    ],
    resources = ["//127-cd-nextgen-entities/src/test/resources:resource"],
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "//:lombok",
        "//878-ng-common-utilities:module",
        "//950-ng-core:tests",
        "//960-persistence:supporter-test",
        "//990-commons-test:module",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:pl_pragmatists_JUnitParams",
    ],
)

run_tests()

run_analysis()
