load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
            ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//980-commons:module",
        "//999-annotations:module",
        "@maven//:com_amazonaws_aws_java_sdk_applicationautoscaling",
        "@maven//:com_amazonaws_aws_java_sdk_cloudwatch",
        "@maven//:com_amazonaws_aws_java_sdk_elasticloadbalancing",
        "@maven//:com_amazonaws_aws_java_sdk_elasticloadbalancingv2",
        "@maven//:com_amazonaws_aws_java_sdk_route53",
        "@maven//:com_amazonaws_aws_java_sdk_secretsmanager",
        "@maven//:com_amazonaws_aws_java_sdk_servicediscovery",
        "@maven//:com_github_allbegray_slack_api",
        "@maven//:com_google_apis_google_api_services_compute",
        "@maven//:com_google_apis_google_api_services_logging",
        "@maven//:com_hierynomus_smbj",
        "@maven//:com_hierynomus_sshj",
        "@maven//:com_splunk_splunk",
        "@maven//:io_cloudsoft_windows_winrm4j",
        "@maven//:io_dropwizard_dropwizard_views_freemarker",
        "@maven//:io_grpc_grpc_netty",
        "@maven//:io_harness_cv_data_collection_dsl",
        "@maven//:io_netty_netty_all",
        "@maven//:javax_javaee_api",
        "@maven//:org_apache_commons_commons_email",
        "@maven//:org_jooq_joor",
        "@maven//:xerces_xercesImpl",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    resources = [],
    visibility = ["//visibility:public"],
    deps = [
        "module",
        "//:lombok",
        "//932-connector-task:module",
        "//933-ci-commons:module",
        "//950-delegate-tasks-beans:module",
        "//952-scm-java-client:module",
        "//953-events-api:module",
        "//954-connector-beans:module",
        "//955-delegate-beans:module",
        "//957-cg-beans:module",
        "//959-file-service-commons:module",
        "//960-api-services:module",
        "//970-api-services-beans:module",
        "//970-ng-commons:module",
        "//980-commons:module",
        "//990-commons-test:module",
        "//999-annotations:module",
        "@maven//:com_amazonaws_aws_java_sdk_codecommit",
        "@maven//:com_amazonaws_aws_java_sdk_core",
        "@maven//:com_amazonaws_aws_java_sdk_ecr",
        "@maven//:com_esotericsoftware_yamlbeans_yamlbeans",
        "@maven//:com_github_tomakehurst_wiremock_jre8_standalone",
        "@maven//:com_google_api_client_google_api_client",
        "@maven//:com_google_apis_google_api_services_container",
        "@maven//:com_google_apis_google_api_services_storage",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_http_client_google_http_client",
        "@maven//:com_google_inject_guice",
        "@maven//:com_hierynomus_sshj",
        "@maven//:com_splunk_splunk",
        "@maven//:com_squareup_okhttp3_okhttp",
        "@maven//:com_squareup_retrofit2_retrofit",
        "@maven//:commons_io_commons_io",
        "@maven//:io_fabric8_fabric8_utils",
        "@maven//:io_fabric8_kubernetes_client",
        "@maven//:io_fabric8_kubernetes_client_project",
        "@maven//:io_harness_cv_data_collection_dsl",
        "@maven//:io_kubernetes_client_java",
        "@maven//:io_kubernetes_client_java_api",
        "@maven//:io_kubernetes_client_java_api_fluent",
        "@maven//:junit_junit",
        "@maven//:org_apache_commons_commons_email",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_cloudfoundry_cloudfoundry_operations",
        "@maven//:org_jetbrains_annotations",
        "@maven//:org_jooq_joor",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_inline",
        "@maven//:org_powermock_powermock_api_mockito2",
        "@maven//:org_powermock_powermock_core",
        "@maven//:org_powermock_powermock_module_junit4",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_zeroturnaround_zt_exec",
        "@maven//:pl_pragmatists_JUnitParams",
        "@maven//:xerces_xercesImpl",
    ],
)

run_tests()

run_analysis()

