load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")
load("//:tools/bazel/harness.bzl", "java_library")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//970-ng-commons:module",
        "//980-commons:module",
        "//999-annotations:module",
        "@maven//:org_redisson_redisson",
    ],
)

run_tests()

run_analysis()
