load("//:tools/bazel/harness.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis")

HarnessTeam = "PT"

java_library(
    name = "module",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//999-annotations/src/main/java/io/harness/agent/sdk",
        "//999-annotations/src/main/java/io/harness/annotations/dev",
    ],
)

run_analysis()
