# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

#load("//:tools/bazel/harness.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis")
load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "mod",
    main_class = "io.harness.DeployDetectiveApp",
    visibility = ["//visibility:public"],
    srcs = glob(["src/main/**/*.java"]),
    data = ["//:resource"],
    resources = [
        "//deploy-detective/src/main/resources:resource",
    ],
    runtime_deps = [
        "//deploy-detective/src/main/resources",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
    deps = [
        "//:lombok",
        "@maven//:com_google_inject_guice",
#        "//120-ng-manager:module",
        "//959-ng-persistence:module",
#        "//clients/notification:module",
#        "//clients/access-control/:module",
#        "//960-persistence:module",
        "//980-commons:module"
    ],
)

#java_library(
#    name = "module",
#    resources = [
#        "//deploy-detective/src/main/resources:resource",
#    ],
#    srcs = glob(["src/main/**/*.java"]),
#    visibility = ["//visibility:public"],
#    deps = [
#        "//:lombok",
#        "//980-commons:module",
#    ]
#)

#java_library(
#    name = "tests",
#    testonly = True,
#    srcs = glob(["src/test/**/*.java"]),
#    resources = [
#        "//970-ng-commons/src/test/resources:resource",
#    ],
#    visibility = ["//visibility:public"],
#    deps = [
#        ":module",
#        "//:lombok",
#        "//980-commons:module",
#        "//990-commons-test:module",
#        "//999-annotations:module",
#        "@maven//:com_fasterxml_jackson_core_jackson_databind",
#        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
#        "@maven//:com_google_code_findbugs_annotations",
#        "@maven//:com_google_guava_guava",
#        "@maven//:com_google_inject_guice",
#        "@maven//:dev_morphia_morphia_core",
#        "@maven//:javax_validation_validation_api",
#        "@maven//:junit_junit",
#        "@maven//:org_apache_commons_commons_lang3",
#        "@maven//:org_apache_logging_log4j_log4j_api",
#        "@maven//:org_assertj_assertj_core",
#        "@maven//:org_slf4j_slf4j_api",
#    ],
#)

#run_tests()
