# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("//:tools/bazel/macros.bzl", "run_analysis")
load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "mod",
    main_class = "io.harness.releaseradar.ReleaseRadarApp",
    visibility = ["//visibility:public"],
    srcs = glob(["src/main/**/*.java"]),
    data = ["//:resource"],
    resources = [
        "//release-radar/src/main/resources:resource",
    ],
    runtime_deps = [
        "//release-radar/src/main/resources",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
    deps = [
        "//:lombok",
        "@maven//:com_google_inject_guice",
#        "//120-ng-manager:module",
        "//959-ng-persistence:module",
#        "//clients/notification:module",
#        "//clients/access-control/:module",
        "//960-persistence:module",
        "//980-commons:module"
    ],
)