load("@rules_java//java:defs.bzl", "java_library")
load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
    ],
)

java_binary(
    name = "DelegateAgent",
    main_class = "io.harness.delegate.agent.DelegateAgent",
    resources = ["//delegate/agent/src/main/resources:resource"],
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":module",
        "@maven//:ch_qos_logback_logback_classic",
    ],
    deps = [],
)

run_analysis_per_module()
