# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("//:tools/bazel/docker/docker-utils.bzl", "docker_layers", "docker_image", "docker_push", "docker_pkg")

docker_layers(
    name = "ceng-onprem-run",
    build_type = "onprem",
)

docker_layers(
    name = "ceng-saas-run",
    build_type = "saas",
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
        ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//340-ce-nextgen:keystore.jks",
        "//340-ce-nextgen:config.yml",
    ],
    files = {
        "//340-ce-nextgen:module_deploy.jar": "ce-nextgen-capsule.jar",
        },
)

docker_image(
    name = "ceng-saas-image",
    dockerlayers = [
            ":ceng-saas-run"
            ],
    cmd = [
        "/bin/bash", "-c",
        "./run.sh",
        ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
        name = "ceng-saas-push",
        image = "ceng-saas-image",
        repository = "platform-205701/harness/harness-services-bazel/ceng-saas-bazel-test",
        imagetag = "$(TAG)",
)

docker_image(
    name = "ceng-onprem-image",
    dockerlayers = [
            ":ceng-onprem-run"
            ],
    cmd = [
        "/bin/bash", "-c",
        "./run.sh",
        ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
        name = "ceng-onprem-push",
        image = "ceng-onprem-image",
        repository = "platform-205701/harness/harness-services-bazel/ceng-onprem-bazel-test",
        imagetag = "$(TAG)",
)
