# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("//:tools/bazel/docker/docker-utils.bzl", "docker_layers", "docker_image", "docker_push", "docker_pkg")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

docker_layers(
    name = "cdc-onprem-run",
    build_type = "onprem",
)

docker_layers(
    name = "cdc-saas-run",
    build_type = "saas",
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
        ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//110-change-data-capture:config.yml",
    ],
    files = {
        "//110-change-data-capture:module_deploy.jar": "change-data-capture.jar",
        },
)

docker_image(
    name = "cdc-saas-image",
    dockerlayers = [
            ":cdc-saas-run"
            ],
    cmd = [
        "/bin/bash", "-c",
        "./run.sh",
        ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
        name = "cdc-saas-push",
        image = "cdc-saas-image",
        repository = "platform-205701/harness/harness-services-bazel/cdc-saas-bazel-test",
        imagetag = "$(TAG)",
)

docker_image(
    name = "cdc-onprem-image",
    dockerlayers = [
            ":cdc-onprem-run"
            ],
    cmd = [
        "/bin/bash", "-c",
        "./run.sh",
        ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
        name = "cdc-onprem-push",
        image = "cdc-onprem-image",
        repository = "platform-205701/harness/harness-services-bazel/cdc-onprem-bazel-test",
        imagetag = "$(TAG)",
)
