# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("//:tools/bazel/docker/docker-utils.bzl", "docker_layers", "docker_image", "docker_push", "docker_pkg")

docker_layers(
    name = "cls-onprem-run",
    build_type = "onprem",
)

docker_layers(
    name = "cls-saas-run",
    build_type = "saas",
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
        ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//210-command-library-server:command-library-server-config.yml",
        "//210-command-library-server:keystore.jks",
    ],
    files = {
        "//210-command-library-server:module_deploy.jar": "command-library-app-capsule.jar",
        },
)

docker_image(
    name = "cls-saas-image",
    dockerlayers = [
            ":cls-saas-run"
            ],
    cmd = [
        "/bin/bash", "-c",
        "./run.sh",
        ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
        name = "cls-saas-push",
        image = "cls-saas-image",
        repository = "platform-205701/harness/harness-services-bazel/cls-saas-bazel-test",
        imagetag = "$(TAG)",
)

docker_image(
    name = "cls-onprem-image",
    dockerlayers = [
            ":cls-onprem-run"
            ],
    cmd = [
        "/bin/bash", "-c",
        "./run.sh",
        ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
        name = "cls-onprem-push",
        image = "cls-onprem-image",
        repository = "platform-205701/harness/harness-services-bazel/cls-onprem-bazel-test",
        imagetag = "$(TAG)",
)
