# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("//:tools/bazel/docker/docker-utils.bzl", "docker_image", "docker_layers", "docker_pkg", "docker_push")

docker_layers(
    name = "cls-onprem-run",
    build_type = "onprem",
)

docker_layers(
    name = "cls-saas-run",
    build_type = "saas",
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
    ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//210-command-library-server:command-library-server-config.yml",
        "//210-command-library-server:keystore.jks",
    ],
    files = {
        "//210-command-library-server:module_deploy.jar": "command-library-app-capsule.jar",
    },
)

docker_image(
    name = "cls-saas-image",
    cmd = [
        "/bin/bash",
        "-c",
        "./run.sh",
    ],
    dockerlayers = [
        ":cls-saas-run",
    ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "cls-saas-push",
    image = "cls-saas-image",
    imagetag = "$(TAG)",
    repository = "platform-205701/harness/harness-services-bazel/cls-saas-bazel-test",
)

docker_image(
    name = "cls-onprem-image",
    cmd = [
        "/bin/bash",
        "-c",
        "./run.sh",
    ],
    dockerlayers = [
        ":cls-onprem-run",
    ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "cls-onprem-push",
    image = "cls-onprem-image",
    imagetag = "$(TAG)",
    repository = "platform-205701/harness/harness-services-bazel/cls-onprem-bazel-test",
)
